maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (!estSurBiscuit) {
    	random(3) match {
    		case 0 => avance
    		case 1 => droite
    		case 2 => gauche
    	}
    }
}
